--- a/_config.yml
+++ b/_config.yml
@@ -25,19 +25,19 @@ title : Helium Jekyll
 tagline: Bootstrap 4 UI kit for jekyll
 author : 
   name : Antonio Trento
-  site: https://lantoniotrento.github.io
+  site: https://rameshshann.github.io
   description : I&#39;m a web master interested in communication applied to web marketing.
   image : social-image.png
-  email : lantoniotrento@gmail.com
+  email : rameshshann@gmail.com
   github : antoniotrento
-  twitter : lantoniotrento
-  facebook: lantoniotrento
+  twitter : rameshshann
+  facebook: rameshshann
   linkedin: antoniotrento
-  instagram: lantoniotrento
+  instagram: rameshshann
   pinterest: antoniotrento
   feedburner : 
 
-twitter_username: lantoniotrento
+twitter_username: rameshshann
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
 # Most places will/should use BASE_PATH to make the urls
@@ -46,7 +46,7 @@ twitter_username: lantoniotrento
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : https://heliumjk.github.io
+production_url : https://rameshshann.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -75,7 +75,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : https://heliumjk.github.io
+  BASE_PATH : https://rameshshann.github.io/
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
@@ -85,7 +85,7 @@ JB :
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  ASSET_PATH : https://heliumjk.github.io/assets/themes/bootstrap
+  ASSET_PATH : https://rameshshann.github.io/assets/themes/bootstrap
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
